--- a/pointgame/pointgame/src/main/resources/application.properties
+++ b/pointgame/pointgame/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # MyBatis 설정
-mybatis.mapper-locations=classpath:/mappers/*.xml
-mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.ksinfo.pointgame.dto
 
 # Thymeleaf 설정
 spring.mvc.view.prefix=classpath:/templates/
